test/spec_vectors/global/fail/module_22.wat
(module (global (import "test" "global-mut-i32") (mut i32)) (global i32 (global.get 0)))